--- a/specific_trip.html
+++ b/specific_trip.html
@@ -743,13 +743,13 @@
                                                             <div
                                                               aria-label="1 of 5"
                                                               role="img"
-                                                              class="_r752or"
+                                                              class="pagination-bullets"
                                                             >
                                                               <div
                                                                 class="_18hl5q5"
                                                               >
                                                                 <div
-                                                                  class="pagination-bullet-wrapper"
+                                                                  class="pagination-bullets__list"
                                                                   style="
                                                                     transform: translateX(
                                                                       0px
